[dashboard builder] fix side pane labels and hove z-index

--- a/superset/assets/src/dashboard/stylesheets/hover-menu.less
+++ b/superset/assets/src/dashboard/stylesheets/hover-menu.less
@@ -1,7 +1,7 @@
 .hover-menu {
   opacity: 0;
   position: absolute;
-  z-index: 1000;
+  z-index: 10;
   font-size: 14px;
 }
 
